test: complete tests
